#4 find student by last name
